TESTS = \
	test_libgstc_python_init.py \
	test_libgstc_python_bus_filter.py \
	test_libgstc_python_bus_read.py \
	test_libgstc_python_bus_timeout.py \
	test_libgstc_python_create.py \
	test_libgstc_python_debug_color.py \
	test_libgstc_python_debug_enable.py \
	test_libgstc_python_debug_reset.py \
	test_libgstc_python_debug_threshold.py \
	test_libgstc_python_delete.py \
	test_libgstc_python_element_get.py \
	test_libgstc_python_element_set.py \
	test_libgstc_python_event_eos.py \
	test_libgstc_python_event_flush_start.py \
	test_libgstc_python_event_flush_stop.py \
	test_libgstc_python_event_seek.py

export PYTHONPATH = $PYTHONPATH:$(top_srcdir)/libgstc/python
