TESTS = \
	test_libgstc_python_init.py \
	test_libgstc_python_bus_filter.py \
	test_libgstc_python_bus_read.py \
	test_libgstc_python_bus_timeout.py \
	test_libgstc_python_create.py \
	test_libgstc_python_debug_color.py \
	test_libgstc_python_debug_enable.py \
	test_libgstc_python_debug_reset.py \
	test_libgstc_python_debug_threshold.py \
	test_libgstc_python_delete.py \
	test_libgstc_python_element_get.py \
	test_libgstc_python_element_set.py \
	test_libgstc_python_event_eos.py \
	test_libgstc_python_event_flush_start.py \
	test_libgstc_python_event_flush_stop.py \
	test_libgstc_python_event_seek.py \
	test_libgstc_python_list_elements.py \
	test_libgstc_python_list_pipelines.py \
	test_libgstc_python_list_properties.py \
	test_libgstc_python_list_signals.py \
	test_libgstc_python_pipeline_create.py \
	test_libgstc_python_pipeline_delete.py \
	test_libgstc_python_pipeline_pause.py \
	test_libgstc_python_pipeline_play.py \
	test_libgstc_python_pipeline_stop.py \
	test_libgstc_python_read.py \
	test_libgstc_python_signal_connect.py \
	test_libgstc_python_signal_disconnect.py \
	test_libgstc_python_signal_timeout.py \
	test_libgstc_python_update.py \
	test_libgstc_python_stop_gstd.py

export PYTHONPATH = $PYTHONPATH:$(top_srcdir)/libgstc/python
